--- a/assets/templates/forex/templates/account-types.html
+++ b/assets/templates/forex/templates/account-types.html
@@ -40,7 +40,7 @@
         <p>Accounts types</p>
         <div class="sub-menu__box  sub-menu__box--account">
           <a class="sub-menu__logo" href="../index.html">
-            <img src="../img/logo-menu.png" alt="">
+            <img src="../img/logo-menu.png" alt="Forex24">
           </a>
           <a href="#">ACCOUNT TYPES</a>
           <a href="#">ACCOUNT COMPARISON</a>
