--- a/assets/templates/forex/css/style.css
+++ b/assets/templates/forex/css/style.css
@@ -850,25 +850,26 @@ body {
   -webkit-box-direction: normal;
   -ms-flex-direction: column;
   flex-direction: column;
-  top: -460px;
+  top: -400px;
   width: auto;
-  height: 480px;
+  height: 420px;
   background: rgba(0, 0, 0, 0.7);
   -webkit-transition: 0.8s;
   transition: 0.8s;
   z-index: 5; }
   .sub-menu__box:hover {
-    -webkit-transform: translateY(460px);
-    transform: translateY(460px); }
+    -webkit-transform: translateY(400px);
+    transform: translateY(400px); }
   .sub-menu__box:hover .sub-menu__arrow {
     -webkit-transform: rotate(180deg);
     transform: rotate(180deg);
     background: url("../img/acc-elipse.png") no-repeat center, url("../img/acc-arrow.png") no-repeat 11px 14px; }
   .sub-menu__box a {
-    padding: 15px 30px;
+    padding: 10px 30px;
     color: #fff;
     font-size: 12px;
     font-weight: bold;
+    text-align: center;
     text-decoration: none;
     -webkit-transition: 0.3s;
     transition: 0.3s; }
@@ -902,9 +903,11 @@ body {
 .sub-menu__box--about {
   left: -35px; }
 
-.sub-menu__logo:hover {
-  -webkit-transform: none !important;
-  transform: none !important; }
+.sub-menu__logo {
+  margin-top: 10px; }
+  .sub-menu__logo:hover {
+    -webkit-transform: none !important;
+    transform: none !important; }
 
 .sub-menu__arrow {
   position: absolute;
@@ -939,15 +942,10 @@ body {
       padding: 10px 30px; } }
 
 @media screen and (max-width: 768px) {
-  .sub-menu__flex {
-    -webkit-box-pack: start;
-    -ms-flex-pack: start;
-    justify-content: flex-start; }
   .sub-menu p {
     margin-top: 35px; }
   .sub-menu__box {
-    left: auto;
-    right: 0; } }
+    display: none; } }
 
 .account p {
   margin-top: 40px;
@@ -1081,21 +1079,36 @@ body {
     -webkit-box-align: center;
     -ms-flex-align: center;
     align-items: center;
-    padding-top: 50px; } }
+    padding-top: 50px; }
+  .account__pay {
+    display: none; } }
 
 .about {
-  color: #000e55;
-  opacity: 0.7; }
+  color: #000e55; }
   .about h1 {
     margin-top: 40px;
     margin-bottom: 30px;
-    font-size: 22px;
-    text-align: center; }
+    font-size: 20px;
+    text-align: center;
+    opacity: 0.9; }
   .about p {
-    font-size: 18px; }
+    opacity: 0.7; }
+  .about b {
+    font-size: 22px;
+    opacity: 0.9; }
 
 .about__pb {
   padding-bottom: 40px; }
 
-.page-header__sub-box--about {
-  left: -15px; }
+@media screen and (max-width: 1200px) {
+  .sub-menu__box {
+    top: -320px;
+    left: -15px;
+    height: 330px; }
+    .sub-menu__box:hover {
+      -webkit-transform: translateY(320px);
+      transform: translateY(320px); }
+    .sub-menu__box a {
+      padding: 5px; }
+  .sub-menu__logo img {
+    width: 150px; } }
