--- a/assets/templates/forex/sass/blocks/about-us.scss
+++ b/assets/templates/forex/sass/blocks/about-us.scss
@@ -1,20 +1,21 @@
 .about {
   color: #000e55;
-  opacity: 0.7;
   
   & h1 {
     margin-top: 40px;
     margin-bottom: 30px;
-    font-size: 22px;
+    font-size: 20px;
     text-align: center;
+    opacity: 0.9;
   } 
   
-  & h2 {
-    
+  & p {
+    opacity: 0.7;
   }
   
-  & p {
-    font-size: 18px;
+  & b {
+    font-size: 22px;
+    opacity: 0.9;
   }
 }
 
@@ -22,6 +23,30 @@
   padding-bottom: 40px;
 }
 
-.page-header__sub-box--about {
-  left: -15px;
+@media screen and ($tablet-widths) {
+  .sub-menu__box {
+    // width: 150px;
+    top: -320px;
+    left: -15px;
+    height: 330px;
+    
+    &:hover {
+      transform: translateY(320px);
+    }
+    
+    & a {
+      padding: 5px;
+    }
+  }
+  
+  .sub-menu__logo {
+    
+    & img {
+      width: 150px;
+    }
+  }
+}
+
+@media screen and ($mobile-widths) {  
+
 }
