--- a/assets/templates/forex/templates/account-types.html
+++ b/assets/templates/forex/templates/account-types.html
@@ -12,7 +12,7 @@
 <body>
   <header class="page-header  page-header--account">
     <nav class="page-header__main-nav  page-header__main-nav--closed  page-header__main-nav--nojs">
-      <button class="page-header__toggle" type="button">Открыть меню</button>
+      <button class="page-header__toggle" type="button">Open menu</button>
       <div class="container">
         <div class="page-header__flex">
           <!-- <a href="../index.html">
