--- a/assets/templates/forex/templates/funding.html
+++ b/assets/templates/forex/templates/funding.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>About Us - Forex 24</title>
+  <title>Funding and Widtdrawal - Forex 24</title>
   <!-- <link rel="stylesheet" href="js/slick/slick.css"/> -->
   <!-- <link rel="stylesheet" href="js/slick/slick-theme.css"/> -->
   <link rel="stylesheet" href="../css/style.min.css">
@@ -20,8 +20,8 @@
           </a> -->
           <ul class="page-header__menu">
             <li class="page-header__item"><a href="../index.html">Home</a></li>
-            <li class="page-header__item"><a class="page-header__item--active" href="#">About</a></li>
-            <li class="page-header__item"><a href="#">Trading</a></li>
+            <li class="page-header__item"><a href="#">About</a></li>
+            <li class="page-header__item"><a class="page-header__item--active" href="#">Trading</a></li>
             <li class="page-header__item"><a href="#">Resources</a></li>
             <li class="page-header__item"><a href="#">Partners</a></li>
             <li class="page-header__item"><a href="#">Contact Us</a></li>
@@ -37,7 +37,7 @@
   <section class="sub-menu">
     <div class="container">
       <div class="sub-menu__flex">
-        <p>About Us</p>
+        <p>FUNDING AND WITHDRAWAL</p>
         <div class="sub-menu__box  sub-menu__box--about">
           <a class="sub-menu__logo" href="../index.html">
             <img src="../img/logo-menu.png" alt="Forex24">
