--- a/assets/templates/forex/sass/blocks/funding.scss
+++ b/assets/templates/forex/sass/blocks/funding.scss
@@ -21,7 +21,6 @@
 
 .funding__title {
   height: 40px !important;
-  padding: 0;
   color: $mc;
   text-transform: uppercase;
   border: none !important;
@@ -42,11 +41,24 @@
   }
   
   .funding__pay-img {
-    background: url('../img/table-1.png') no-repeat center;
     background-size: 100%;
   }
 }
 
 @media screen and ($mobile-widths) {    
+  .funding {
+    
+    & tr {
+      height: 70px;
+      font-size: 10px;
+    }
+    
+    & p {
+      text-align: center;
+    }
+  }
   
+  .funding__title {
+    height: 50px !important;
+  }
 }
