--- a/assets/templates/forex/sass/blocks/page-header.scss
+++ b/assets/templates/forex/sass/blocks/page-header.scss
@@ -4,7 +4,7 @@
   align-items: center;
 }
 
-.page-header--account {
+.page-header--temp {
   position: relative;
   background: #fff;
   z-index: 10;
