--- a/assets/templates/forex/templates/about-us.html
+++ b/assets/templates/forex/templates/about-us.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="../css/style.min.css">
 </head>
 <body>
-  <header class="page-header  page-header--account">
+  <header class="page-header  page-header--temp">
     <nav class="page-header__main-nav  page-header__main-nav--closed  page-header__main-nav--nojs">
       <button class="page-header__toggle" type="button">Open menu</button>
       <div class="container">
