--- a/assets/templates/forex/templates/kids.html
+++ b/assets/templates/forex/templates/kids.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Desktop - Forex 24</title>
+  <title>Kids - Forex 24</title>
   <!-- <link rel="stylesheet" href="js/slick/slick.css"/> -->
   <!-- <link rel="stylesheet" href="js/slick/slick-theme.css"/> -->
   <link rel="stylesheet" href="../css/style.min.css">
@@ -20,8 +20,8 @@
           </a> -->
           <ul class="page-header__menu">
             <li class="page-header__item"><a href="../index.html">Home</a></li>
-            <li class="page-header__item"><a class="page-header__item--active" href="#">About</a></li>
-            <li class="page-header__item"><a href="#">Trading</a></li>
+            <li class="page-header__item"><a href="#">About</a></li>
+            <li class="page-header__item"><a class="page-header__item--active" href="#">Trading</a></li>
             <li class="page-header__item"><a href="#">Resources</a></li>
             <li class="page-header__item"><a href="#">Partners</a></li>
             <li class="page-header__item"><a href="#">Contact Us</a></li>
@@ -34,13 +34,13 @@
       </div>
     </nav>
   </header>
-  <section class="page-header__sub-menu">
+  <section class="sub-menu">
     <div class="container">
-      <div class="page-header__sub-flex">
-        <p>Platforms</p>
-        <div class="page-header__sub-box  page-header__sub-box--about">
-          <a class="page-header__logo-menu" href="../index.html">
-            <img src="../img/logo-menu.png" alt="">
+      <div class="sub-menu__flex">
+        <p>Kids</p>
+        <div class="sub-menu__box  sub-menu__box--kids">
+          <a class="sub-menu__logo" href="../index.html">
+            <img src="../img/logo-menu.png" alt="Forex24">
           </a>
           <a href="#">ACCOUNT TYPES</a>
           <a href="#">ACCOUNT COMPARISON</a>
@@ -48,36 +48,28 @@
           <a href="#">TRADING SPECIFICATION</a>
           <a href="#">FUNDING AND WITHDROVAL</a>
           <a href="#">ANNOUNCEMENTS</a>
-          <button class="page-header__arrow"></button>
+          <button class="sub-menu__arrow"></button>
         </div>
       </div>
     </div>
   </section>
-  <section class="platform">
+  <section class="kids">
     <div class="container">
-      <h1>DESKTOP</h1>  
-      <b>Mt4 Desktop</b>    
-      <div class="platform__middle">
-        <p>MetaTrader is the most popular front-end application in the industry. Forex24 MT4 has taken the MetaTrader MT4 platform and introduced its liquidity to create a user-friendly front-end trading interface with interbank liquidity and fast execution.</p>
-        <div class="platform__icon"></div>
-      </div>
-      <div class="platform__bottom">
-        <b>Benefits</b>
-        <ul>
-          <li>Ease of use through its user friendly interface</li>
-          <li>Multiple charting and analysis</li>
-          <li>Multilingual platform</li>
-          <li>Real time client account summary</li>
-          <li>It requires NO download. Simply login and trade from your browser</li>
-          <li>One-Click Trading allows you to place trades in a mouse click</li>
-          <li>Get real-time quotes in MarketWatch</li>
-          <li>9 chart time frames</li>
-          <li>Trading from charts & monitor active orders on the chart</li>
-          <li>Advanced analysis tools</li>
-        </ul>
-        <a class="platform__download" href="#">download mt4</a>
-      </div>
-      <p class="about__pb">Naturally, the aim of Forex trading is to earn more money than you`ve invested. Therefore at Forex24 Global , one of our main goals is to empower you to fulfil this goals. Everything you need in order to make it is here, the rest is up to you. All the features of the website have been specially designed to aid our users. Our passion towards our customers is our main drive and what leads us forward. Trading involves risks of loss, for further information please read our Risk Disclosure.</p>
+      <p class="kids__pt">In order to help you better understand our products and services and the nature, risks, costs, potential gains and losses associated with them – we developed Key Information Documents (KIDs). These are categorised below into four major asset classes and include CFDs on Currency pairs, Indices, Commodities, Equities or other OTC derivative products.</p>     
+      <p>If you have any questions, contact Forex24 customer support team at <a href="mailto:support@forex24.com">support@forex24.com</a>.</p>
+      <p>Key Information Documents</p>
+      <p>
+        <a href="#">Forex CFDs</a>
+      </p>
+      <p>
+        <a href="#">Treasury and Commodities CFDs</a>
+      </p>
+      <p>
+        <a href="#">Indices CFDs</a>
+      </p>
+      <p class="kids__pb">
+        <a href="#">Stocks CFDs</a>
+      </p>
     </div>
   </section>
   <div class="account__pay">
