--- a/assets/templates/forex/css/style.css
+++ b/assets/templates/forex/css/style.css
@@ -1218,3 +1218,30 @@ body {
 
 .license__flag--UK {
   background: url("../img/UK.png") no-repeat top left; }
+
+@media screen and (max-width: 768px) {
+  .license h3 {
+    font-size: 25px;
+    text-align: center; }
+  .license b {
+    font-size: 20px; }
+  .license__img {
+    padding-top: 100px;
+    padding-left: 0;
+    padding-bottom: 0;
+    text-align: center;
+    background: url("../img/license-img.png") no-repeat top; }
+  .license__center {
+    font-size: 18px; }
+  .license__flex {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center; }
+  .license__flag {
+    text-align: center; }
+  .license__flag--UK {
+    background: url("../img/UK.png") no-repeat top; } }
