--- a/assets/templates/forex/index.html
+++ b/assets/templates/forex/index.html
@@ -143,7 +143,13 @@
     <h2>AUTOMATIC TRADING CENTER</h2>
   </section>
   <section class="scroll">
-    <div class="scroll__first"></div>
+    <div class="scroll__first">
+      <div class="container">
+        <div class="scroll__logo">
+          <img src="img/scroll-logo.png" alt="Forex24">
+        </div>
+      </div>
+    </div>
     <div class="scroll__text">
       <div class="container">
         <div class="scroll__flex">
