--- a/assets/templates/xm/index.html
+++ b/assets/templates/xm/index.html
@@ -33,5 +33,27 @@
       </div>
     </div>
   </header>
+  <section class="title">
+    <div class="container">
+      <img src="" alt="">
+      <h3></h3>
+      <div class="title__flex">
+        <div class="title__left">
+          <div class="title__bitcoin">
+            <b></b>
+            <a href="#">Buy</a>
+            <p></p>
+          </div>
+        </div>
+        <div class="title__right">
+          <div class="title__bitcoin">
+            <b></b>
+            <a href="#">Buy</a>
+            <p></p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 </body>
 </html>
