--- a/assets/templates/xm/index.html
+++ b/assets/templates/xm/index.html
@@ -35,21 +35,21 @@
   </header>
   <section class="title">
     <div class="container">
-      <img src="" alt="">
-      <h3></h3>
+      <img class="title__logo" src="img/logo.png" alt="XM-crypto">
+      <h3>Digital Currency<br>Real Value</h3>
       <div class="title__flex">
         <div class="title__left">
-          <div class="title__bitcoin">
-            <b></b>
+          <div class="title__box  title__box--bitcoin">
+            <b>Bitcoin</b>
             <a href="#">Buy</a>
-            <p></p>
+            <p>438274982</p>
           </div>
         </div>
         <div class="title__right">
-          <div class="title__bitcoin">
-            <b></b>
+          <div class="title__box  title__box--ethereum">
+            <b>Ethereum</b>
             <a href="#">Buy</a>
-            <p></p>
+            <p>438274982</p>
           </div>
         </div>
       </div>
