--- a/assets/templates/xm/index.html
+++ b/assets/templates/xm/index.html
@@ -55,5 +55,23 @@
       </div>
     </div>
   </section>
+  <section class="info">
+    <div class="container">
+      <div class="info__flex">
+        <div class="info__left">
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate culpa, nulla perspiciatis consectetur quos ad asperiores expedita ex et eveniet aut iste explicabo laudantium ipsum! Nulla incidunt architecto dolor sapiente.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse aliquid, tenetur nisi culpa quis fugiat, fugit! Ex illum cupiditate tempore nesciunt, laboriosam omnis necessitatibus. Ipsam hic, asperiores placeat impedit maiores.</p>
+        </div>
+        <div class="info__center">
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit asperiores veniam maxime nam deleniti saepe aut molestiae consectetur neque, repellat, quam quidem cum omnis fugiat optio. Exercitationem magni, consequuntur ratione?</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus maiores optio nisi, illum aut, qui reprehenderit iure perferendis neque placeat, quia enim similique! Fuga, provident neque distinctio hic aut rerum.</p>
+        </div>
+        <div class="info__right">
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam tempore ut nulla omnis saepe odio fugit dignissimos maiores. Deleniti amet optio commodi cum, suscipit aspernatur rem architecto doloribus et. Itaque.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus non, praesentium, provident eveniet, nobis aliquam itaque officia voluptatum porro quia amet perspiciatis ullam iure fugiat unde delectus dignissimos. Dolore, a.</p>
+        </div>
+      </div>
+    </div>
+  </section>
 </body>
 </html>
