add traders block

--- a/assets/templates/xm/index.html
+++ b/assets/templates/xm/index.html
@@ -73,5 +73,11 @@
       </div>
     </div>
   </section>
+  <section class="traders">
+    <div class="container">
+      <h3>For Traders</h3>
+      <p>Our rates are the most competitivein Israel. We support same day Wire transfer, Cash transfers, with a layout of ever 150 branches, operate a Bitcoin ATM and offer you to purchase your Bitcoins using a Credit Card.</p>
+    </div>
+  </section>
 </body>
 </html>
