--- a/assets/templates/xm/css/style.css
+++ b/assets/templates/xm/css/style.css
@@ -126,7 +126,6 @@ body {
   background: url("../img/title-ethereum.png") no-repeat top; }
 
 .info {
-  font-size: 18px;
   text-align: center; }
 
 .info__flex {
@@ -137,3 +136,15 @@ body {
   -ms-flex-pack: justify;
   justify-content: space-between;
   padding: 50px 0; }
+
+.traders {
+  color: #fff;
+  background: #0038b8;
+  text-align: center; }
+  .traders h3 {
+    margin-top: 0;
+    padding-top: 50px;
+    font-size: 30px;
+    text-transform: uppercase; }
+  .traders p {
+    padding-bottom: 50px; }
