--- a/assets/templates/forex/index.html
+++ b/assets/templates/forex/index.html
@@ -118,13 +118,13 @@
   </section>
   <section class="global">
     <div class="container">
-      <h2 class="global__title">Go Global</h2>
-      <p>Capital Markets & Investment Banking</p>
+      <h2 class="global__title">Forex24 Global<br>on your finger tips</h2>
+      <p>Turn your smartphone into a sophisticated trading too</p>
       <ul class="global__list">
-        <li>Multiple strategies</li>
-        <li>Corporate Banking & Risk Management</li>
-        <li>Precious Metal Trading & Warehousing</li>
-        <li>Real time insights</li>
+        <li>User-friendly and Intuitive for Novices and Pros</li>
+        <li>Automatic Platform Auto-Update</li>
+        <li>Customizable Menus to Meet the Specific Needs of Our Clients</li>
+        <li>Touch-Friendly Technical indicators</li>
       </ul>
       <a href="#">START TRADING NOW</a>
     </div>
