--- a/assets/templates/xm/index.html
+++ b/assets/templates/xm/index.html
@@ -79,5 +79,10 @@
       <p>Our rates are the most competitivein Israel. We support same day Wire transfer, Cash transfers, with a layout of ever 150 branches, operate a Bitcoin ATM and offer you to purchase your Bitcoins using a Credit Card.</p>
     </div>
   </section>
+  <section class="exchange">
+    <div class="container">
+      
+    </div>
+  </section>
 </body>
 </html>
