--- a/assets/templates/forex/index.html
+++ b/assets/templates/forex/index.html
@@ -119,7 +119,7 @@
   <section class="global">
     <div class="container">
       <h2 class="global__title">Forex24 Global<br>on your finger tips</h2>
-      <p>Turn your smartphone into a sophisticated trading too</p>
+      <p>Turn your smartphone into a sophisticated trading tool</p>
       <ul class="global__list">
         <li>User-friendly and Intuitive for Novices and Pros</li>
         <li>Automatic Platform Auto-Update</li>
