--- a/assets/templates/forex/sass/blocks/global.scss
+++ b/assets/templates/forex/sass/blocks/global.scss
@@ -40,7 +40,7 @@
 .global__list {
   margin-top: 50px;
   padding-left: 25px;
-  padding-bottom: 70px;
+  padding-bottom: 50px;
   color: white;
   font-size: 18px;
   font-weight: bold;
@@ -80,13 +80,14 @@
   }
   
   .global__title {
-    font-size: 50px;
+    font-size: 25px;
   }
   
   .global__list {
     display: flex;
     flex-direction: column;
     // align-items: center;
+    margin-top: 30px;
     padding-bottom: 30px;
     font-size: 14px;
     text-align: left;
