--- a/assets/templates/xm/index.html
+++ b/assets/templates/xm/index.html
@@ -81,7 +81,22 @@
   </section>
   <section class="exchange">
     <div class="container">
-      
+      <div class="exchange__flex">
+        <div class="exchange__first">
+          <label for="send">You Send</label>
+          <input type="text" name="send" id="send" placeholder="ILS">
+        </div>
+        <div class="exchange__second">
+          <button type="button" name="change"></button>
+        </div>
+        <div class="exchange__third">
+          <label for="receive">You Receive</label>
+          <input type="text" name="receive" id="receive" placeholder="BTC">
+        </div>
+        <div class="exchange__fourth">
+          <button type="button" name="exchange">Exchange</button>
+        </div>
+      </div>
     </div>
   </section>
 </body>
