--- a/assets/templates/xm/css/style.css
+++ b/assets/templates/xm/css/style.css
@@ -148,3 +148,45 @@ body {
     text-transform: uppercase; }
   .traders p {
     padding-bottom: 50px; }
+
+.exchange label {
+  color: #0038b8;
+  font-size: 20px;
+  font-weight: bold;
+  text-transform: uppercase; }
+
+.exchange input {
+  width: 250px;
+  padding: 5px;
+  border: 1px solid gray;
+  border-radius: 5px; }
+
+.exchange input::-webkit-input-placeholder {
+  text-align: right; }
+
+.exchange input:-ms-input-placeholder {
+  text-align: right; }
+
+.exchange input::-ms-input-placeholder {
+  text-align: right; }
+
+.exchange input::placeholder {
+  text-align: right; }
+
+.exchange__flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+  justify-content: space-around;
+  padding-top: 100px; }
+
+.exchange__first,
+.exchange__third {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column; }
