--- a/assets/templates/xm/index.html
+++ b/assets/templates/xm/index.html
@@ -81,7 +81,7 @@
   </section>
   <section class="exchange">
     <div class="container">
-      <div class="exchange__flex">
+      <div class="exchange__flex  exchange__flex--first">
         <div class="exchange__first">
           <label for="send">You Send</label>
           <input type="text" name="send" id="send" placeholder="ILS">
@@ -95,6 +95,16 @@
         </div>
         <div class="exchange__fourth">
           <button type="button" name="exchange">Exchange</button>
+        </div>
+      </div>
+      <div class="exchange__flex  exchange__flex--second">
+        <div class="exchange__left">
+          <p>Available<br>payment methods</p>
+        </div>
+        <div class="exchange__middle"></div>
+        <div class="exchange__right">
+          <b>Credit Card</b>
+          <p>From<br>172,06 to 17 206,02<br>ILS</p>
         </div>
       </div>
     </div>
