--- a/assets/templates/xm/css/style.css
+++ b/assets/templates/xm/css/style.css
@@ -178,8 +178,15 @@ body {
   display: -ms-flexbox;
   display: flex;
   -ms-flex-pack: distribute;
-  justify-content: space-around;
-  padding-top: 100px; }
+  justify-content: space-around; }
+
+.exchange__flex--first {
+  padding: 100px 0; }
+
+.exchange__flex--second {
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center; }
 
 .exchange__first,
 .exchange__third {
@@ -190,3 +197,39 @@ body {
   -webkit-box-direction: normal;
   -ms-flex-direction: column;
   flex-direction: column; }
+
+.exchange__second {
+  -ms-flex-item-align: center;
+  align-self: center; }
+  .exchange__second button {
+    width: 46px;
+    height: 33px;
+    border: none;
+    background: url("../img/ex-arrow.png"); }
+
+.exchange__fourth button {
+  padding: 15px 40px;
+  color: #0038b8;
+  font-size: 16px;
+  font-weight: bold;
+  text-transform: uppercase;
+  border: none;
+  background: #f7c107; }
+
+.exchange__left {
+  color: #0038b8;
+  font-weight: bold;
+  text-transform: uppercase; }
+  .exchange__left p {
+    margin: 0; }
+
+.exchange__middle {
+  width: 150px;
+  background: url("../img/ex-card.png") no-repeat top;
+  background-size: cover; }
+
+.exchange__right {
+  text-align: right;
+  text-transform: uppercase; }
+  .exchange__right b {
+    color: #0038b8; }
