--- a/assets/templates/forex/css/style.css
+++ b/assets/templates/forex/css/style.css
@@ -412,7 +412,7 @@ body {
     margin-top: 0;
     color: white;
     font-size: 18px;
-    font-weight: bold; }
+    font-weight: 100; }
   .global a {
     padding: 10px 30px;
     color: #2e2963;
@@ -433,8 +433,8 @@ body {
   margin-bottom: 0;
   padding-top: 140px;
   color: white;
-  font-size: 40px;
-  font-weight: bold;
+  font-size: 70px;
+  font-weight: 100;
   text-transform: uppercase; }
 
 .global__list {
