--- a/assets/templates/forex/sass/blocks/global.scss
+++ b/assets/templates/forex/sass/blocks/global.scss
@@ -7,7 +7,7 @@
     margin-top: 0;
     color: white;
     font-size: 18px;
-    font-weight: bold;
+    font-weight: 100;
   }
   
   & a {
@@ -32,8 +32,8 @@
   margin-bottom: 0;
   padding-top: 140px;
   color: white;
-  font-size: 40px;
-  font-weight: bold;
+  font-size: 70px;
+  font-weight: 100;
   text-transform: uppercase;
 }
 
